@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-24T08:14:26Z",
-  "count_outdated" : 410,
-  "uniques_outdated" : 222,
-  "count" : 433,
+  "timestamp" : "2022-07-25T01:04:24Z",
+  "count_outdated" : 414,
+  "uniques_outdated" : 224,
+  "count" : 435,
   "uniques" : 235,
   "clones" : [
-    {
-      "timestamp": "2022-07-10T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 1, 4 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-07-11T00:00:00Z",
       "count": 3,
@@ -77,8 +70,8 @@
     },
     {
       "timestamp": "2022-07-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
