@@ -1,12 +1,7 @@
 {
-  "count": 23,
-  "uniques": 3,
+  "count": 21,
+  "uniques": 2,
   "clones": [
-    {
-      "timestamp": "2022-07-10T00:00:00Z",
-      "count": 3,
-      "uniques": 2
-    },
     {
       "timestamp": "2022-07-11T00:00:00Z",
       "count": 3,
@@ -54,7 +49,7 @@
     },
     {
       "timestamp": "2022-07-24T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
